# cross-control

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  cliff.toml  deny.toml  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/cross-control-certgen/: Cargo.toml
crates/cross-control-certgen/src/: error.rs  lib.rs
crates/cross-control-cli/: Cargo.toml
crates/cross-control-cli/src/: main.rs
crates/cross-control-clipboard/: Cargo.toml
crates/cross-control-clipboard/src/: error.rs  lib.rs
crates/cross-control-daemon/: Cargo.toml
crates/cross-control-daemon/src/: config.rs  daemon.rs  error.rs  lib.rs  session.rs  setup.rs  state.rs
crates/cross-control-daemon/tests/: daemon_integration.rs
crates/cross-control-discovery/: Cargo.toml
crates/cross-control-discovery/src/: error.rs  lib.rs
crates/cross-control-input/: Cargo.toml
crates/cross-control-input/src/: error.rs  lib.rs  mock.rs
crates/cross-control-input/src/linux/: capture.rs  emulation.rs  keymap.rs  mod.rs
crates/cross-control-protocol/: Cargo.toml
crates/cross-control-protocol/src/: connection.rs  error.rs  lib.rs  tls.rs  transport.rs  wire.rs
crates/cross-control-protocol/tests/: quic_roundtrip.rs
crates/cross-control-tui-test/: Cargo.toml
crates/cross-control-tui-test/src/: app.rs  input_handler.rs  main.rs  ui.rs
crates/cross-control-types/: Cargo.toml
crates/cross-control-types/src/: clipboard.rs  device.rs  event.rs  lib.rs  machine.rs  message.rs  screen.rs
docs/: architecture.md  development.md  protocol.md  research-kvm-landscape.md  setup-guide.md
examples/: config.toml
systemd/: cross-control.service
