[package]
name = "cross-control-daemon"
description = "Core daemon: state machine, barrier logic, event routing, IPC for cross-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
linux = ["cross-control-input/linux"]
mock = ["cross-control-input/mock"]

[dependencies]
cross-control-types = { workspace = true }
cross-control-protocol = { workspace = true }
cross-control-input = { workspace = true }
cross-control-clipboard = { workspace = true }
cross-control-discovery = { workspace = true }
cross-control-certgen = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
hostname = "0.4"

[dev-dependencies]
toml = { workspace = true }
cross-control-input = { workspace = true, features = ["mock"] }
cross-control-certgen = { workspace = true }
cross-control-protocol = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
rustls = { workspace = true }

[lints]
workspace = true
