[package]
name = "cross-control-input"
description = "Platform-abstracted input capture and emulation for cross-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
linux = ["evdev"]
mock = []

[dependencies]
cross-control-types = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
evdev = { workspace = true, optional = true }

[lints]
workspace = true
