[package]
name = "cross-control-protocol"
description = "QUIC transport layer and wire protocol for cross-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cross-control-types = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
