[package]
name = "cross-control-tui-test"
description = "Visual TUI test harness for cross-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cross-control-types = { workspace = true }
cross-control-protocol = { workspace = true }
cross-control-daemon = { workspace = true, features = ["mock"] }
cross-control-input = { workspace = true, features = ["mock"] }
cross-control-certgen = { workspace = true }
tokio = { workspace = true, features = ["full"] }
ratatui = { workspace = true }
crossterm = { workspace = true }
rustls = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
