[package]
name = "cross-control-types"
description = "Shared types for cross-control: events, devices, screens, identifiers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
bincode = { workspace = true }
serde_json = "1"
